--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/ecommerce
+MONGO_URI=mongodb+srv://user:user@clustercoderbackend.yov16h5.mongodb.net/?retryWrites=true&w=majority
 # Some dummy token to authorize some API endpoints
 TOKEN=abc123
 # USERNAME AND PASSWORD (BETTER TO HAVE IT SAVED ON MONGODB BUT FOR TESTING ONLY)
